testsuite/tests/typecheck/should_fail/AssocTyDef05.stderr
AssocTyDef05.hs:6:5: error: [GHC-12985]
    • Number of parameters must match family declaration; expected 1.
    • In the default associated type family instance declaration for ‘Typ’
      In the class declaration for ‘Cls’

